--- a/index.html
+++ b/index.html
@@ -71,59 +71,77 @@
               </button>
             </div>
             <div class="modal-body">
-                <form>
+                <form class="needs-validation" novalidate>
                     <div class="form-group row">
                       <label for="Nama" class="col-sm-4 col-form-label">Nama</label>
                       <div class="col-sm-8">
-                        <input type="text" class="form-control" name="Nama" id="Nama">
+                        <input required type="text" class="form-control" name="Nama" id="Nama">
+                        <div class="invalid-feedback">
+                          Nama harus diisi.
+                        </div>
                       </div>
                     </div>
                     <div class="form-group row">
                       <label for="alamat" class="col-sm-4 col-form-label">Alamat</label>
                       <div class="col-sm-8">
-                        <textarea class="form-control" name="Alamat" id="alamat" rows="3"></textarea>
+                          <textarea required class="form-control" name="Alamat" id="alamat" rows="3"></textarea>
+                          <div class="invalid-feedback">
+                            Alamat harus diisi.
+                          </div>
                       </div>
                     </div>
                     <div class="form-group row">
                         <legend class="col-form-label col-sm-4 pt-0">Jenis Kelamin</legend>
                         <div class="col-sm-8">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="JenisKelamin" id="lakiLaki" value="Laki-laki">
+                                <input required class="form-check-input" type="radio" name="JenisKelamin" id="lakiLaki" value="Laki-laki">
                                 <label class="form-check-label" for="lakiLaki">
                                     Laki-laki
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="JenisKelamin" id="peremuan" value="Perempuan">
+                                <input required class="form-check-input" type="radio" name="JenisKelamin" id="peremuan" value="Perempuan">
                                 <label class="form-check-label" for="peremuan">
                                     Perempuan
                                 </label>
+                                <div class="invalid-feedback">
+                                    Harus memilih jenis kelamin.
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="Foto" class="col-sm-4 col-form-label">Foto</label>
                         <div class="col-sm-8">
-                          <input type="file" name="Foto" class="form-control-file" id="Foto">
+                            <input required type="file" name="Foto" class="form-control-file" id="Foto">
+                            <div class="invalid-feedback">
+                                Foto harus diisi.
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="CV" class="col-sm-4 col-form-label">CV</label>
                         <div class="col-sm-8">
-                          <input type="file" name="CV" class="form-control-file" id="CV">
+                          <input required type="file" name="CV" class="form-control-file" id="CV">
+                          <div class="invalid-feedback">
+                                CV harus diisi.
+                            </div>
                         </div>
                     </div>
                     <div class="form-group row">
                         <label for="Sertifikat" class="col-sm-4 col-form-label">Sertifikat</label>
                         <div class="col-sm-8">
-                          <input type="file" name="Sertifikat" class="form-control-file" id="Sertifikat">
+                          <input required type="file" name="Sertifikat" class="form-control-file" id="Sertifikat">
+                            <div class="invalid-feedback">
+                                Sertifikat harus diisi.
+                            </div>
                         </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Batal</button>
-              <button type="button" class="btn btn-primary">Simpan</button>
+              <button type="button" onclick="simpanData()" class="btn btn-primary">Simpan</button>
             </div>
           </div>
         </div>
@@ -138,15 +156,34 @@
     <!-- bootstrap js -->
     
 
-    <!-- <script>
+    <script>
         let Data = []
 
-        const 
+        let model = {}
 
         const Validasiform = ()=>{
+            let total = 0
+            let valid = 0
+            let forms = document.getElementsByClassName('needs-validation');
+            let validation = Array.prototype.filter.call(forms, function(form) {
+                console.log(form.checkValidity());
+                total +=1
+                if (form.checkValidity() === true) {
+                    valid += 1
+                }
+                form.classList.add('was-validated')
+            });
+            console.log(total,valid);
+            return total===valid
+        }
 
+        const simpanData = ()=>{
+            let isValid = Validasiform()
+            if (isValid) {
+                console.log("VALID COY");
+            }
         }
         
-    </script> -->
+    </script>
 </body>
 </html>
