--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="form-group row">
                         <label for="Foto" class="col-sm-4 col-form-label">Foto</label>
                         <div class="col-sm-8">
-                            <input required type="file" name="Foto" class="form-control-file" id="Foto">
+                            <input required type="file" name="Foto" class="form-control-file" id="Foto" accept="image/png, image/jpeg">
                             <div class="invalid-feedback">
                                 Foto harus diisi.
                             </div>
@@ -122,7 +122,8 @@
                     <div class="form-group row">
                         <label for="CV" class="col-sm-4 col-form-label">CV</label>
                         <div class="col-sm-8">
-                          <input required type="file" name="CV" class="form-control-file" id="CV">
+                          <input required type="file" name="CV" class="form-control-file" id="CV" accept="application/pdf,application/msword,
+                          application/vnd.openxmlformats-officedocument.wordprocessingml.document">
                           <div class="invalid-feedback">
                                 CV harus diisi.
                             </div>
@@ -131,7 +132,8 @@
                     <div class="form-group row">
                         <label for="Sertifikat" class="col-sm-4 col-form-label">Sertifikat</label>
                         <div class="col-sm-8">
-                          <input required type="file" name="Sertifikat" class="form-control-file" id="Sertifikat">
+                          <input required type="file" name="Sertifikat" class="form-control-file" id="Sertifikat" accept="application/pdf,application/msword,
+                          application/vnd.openxmlformats-officedocument.wordprocessingml.document">
                             <div class="invalid-feedback">
                                 Sertifikat harus diisi.
                             </div>
