--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
                 data = [...data,model]
 
                 renderdata()
+
+                $("#formModal").modal("hide")
                 resetForm()
             }
         }
