--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-              <button type="button" onclick="resetForm()" class="btn btn-secondary">Batal</button>
+              <button type="button" onclick="resetForm()" class="btn btn-secondary">Reset</button>
               <button type="button" onclick="simpanData()" class="btn btn-success">Simpan</button>
             </div>
           </div>
